--- a/Stocky.Client/Components/DialogWindows/PocketDialogs/CreatePocketDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/PocketDialogs/CreatePocketDialog.razor
@@ -1,6 +1,7 @@
 @using System.Net
 @using System.Net.Http.Headers
 @using Append.Blazor.Printing
+@using MudBlazor.Components.DialogWindows.ProductDialogs
 @using MudBlazor.Components.Layout
 @using MudBlazor.Components.Service
 @using QRCoder
