--- a/Stocky.Client/Components/DialogWindows/OrderDialogs/CreateOrderDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/OrderDialogs/CreateOrderDialog.razor
@@ -10,16 +10,14 @@
     <DialogContent>
         <MudText Typo="Typo.h6" Class="mb-4">@ContentText</MudText>
 
-        <MudSelect T="PaymentMethod" Label="Тип оплаты" @bind-Value="_selectedPaymentMethod" Required="true"
-                   Class="mb-3">
+        <MudSelect T="PaymentMethod" Label="Тип оплаты" @bind-Value="_selectedPaymentMethod" Required="true" Class="mb-3">
             <MudSelectItem Value="PaymentMethod.Cash">Наличные</MudSelectItem>
             <MudSelectItem Value="PaymentMethod.DushanbeCity">Душанбе Сити</MudSelectItem>
             <MudSelectItem Value="PaymentMethod.Alif">Alif</MudSelectItem>
             <MudSelectItem Value="PaymentMethod.Eskhata">Eskhata</MudSelectItem>
         </MudSelect>
 
-        <MudTextField T="double" Label="Сумма" Variant="Variant.Outlined" @bind-Value="_amount" Required="true"
-                      Class="mb-3"/>
+        <MudTextField T="double" Label="Сумма" Variant="Variant.Outlined" @bind-Value="_amount" Required="true" Class="mb-3" />
     </DialogContent>
 
     <DialogActions>
@@ -27,7 +25,7 @@
         <MudButton Color="@Color" OnClick="CreateOrder" Variant="Variant.Filled" Disabled="_isLoading">
             @if (_isLoading)
             {
-                <MudProgressCircular Size="(Size)16" Indeterminate="true" Color="Color.Inherit" Class="mr-2"/>
+                <MudProgressCircular Size="(Size)16" Indeterminate="true" Color="Color.Inherit" Class="mr-2" />
             }
             @ButtonText
         </MudButton>
@@ -47,6 +45,7 @@
     private string? ApiBaseUrl => Configuration["ApiBaseUrl"];
     private bool _isLoading;
 
+    // Local binding fields
     private double _amount;
     private PaymentMethod _selectedPaymentMethod = PaymentMethod.Cash;
 
@@ -68,8 +67,7 @@
             {
                 UserId = UserId,
                 TotalAmount = _amount,
-                Method = _selectedPaymentMethod,
-                EmployeeId = Convert.ToInt32(AuthService.EmployeeId)
+                Method = _selectedPaymentMethod
             };
 
             Http.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("Bearer", AuthService.Token);
@@ -78,7 +76,6 @@
             if (response.IsSuccessStatusCode)
             {
                 MudDialog.Close(DialogResult.Ok(true));
-                StateHasChanged();
             }
             else
             {
@@ -94,5 +91,4 @@
             _isLoading = false;
         }
     }
-
 }
